# mcas

./: .clang-format  .gitmodules  .travis.yml  0e6451da-d5b0d40df518cbdc237c.js  0e6451da-d5b0d40df518cbdc237c.js.map  18b9706d63cca2269b7f9becb674c44aa55b2dd2-32416edb8b0379d62a46.js  18b9706d63cca2269b7f9becb674c44aa55b2dd2-32416edb8b0379d62a46.js.map  1c920f04-190a6812539d289769ac.js  1c920f04-190a6812539d289769ac.js.map  23420901-715a26533d62e8d22d6c.js  23420901-715a26533d62e8d22d6c.js.map  2fb713ed-6684ee5e831bb5f42367.js  2fb713ed-6684ee5e831bb5f42367.js.map  3b868f35629892d11d8929a9474bdcd02ff94e9e-32416edb8b0379d62a46.js  3b868f35629892d11d8929a9474bdcd02ff94e9e-32416edb8b0379d62a46.js.map  404.html  4119064d-a7135e70643d54c0310e.js  4119064d-a7135e70643d54c0310e.js.map  429848f68e6023d94a7bc8b78140268bd90cb356-32416edb8b0379d62a46.js  429848f68e6023d94a7bc8b78140268bd90cb356-32416edb8b0379d62a46.js.map  429848f68e6023d94a7bc8b78140268bd90cb356-d4e6a1f1313fea38a70a.js  429848f68e6023d94a7bc8b78140268bd90cb356-d4e6a1f1313fea38a70a.js.map  439716bf-b75f6e2cbb15a9821098.js  439716bf-b75f6e2cbb15a9821098.js.map  43a99af2-c5dc08ec4019a269c2ec.js  43a99af2-c5dc08ec4019a269c2ec.js.map  64d7453e447bfed29c214adf6640c6b4a7cce08a-32416edb8b0379d62a46.js  64d7453e447bfed29c214adf6640c6b4a7cce08a-32416edb8b0379d62a46.js.map  6e2d9d0a-2d672d18b2bc5fa95445.js  6e2d9d0a-2d672d18b2bc5fa95445.js.map  702b987b601a41752d79aabaf8914a918273af29-32416edb8b0379d62a46.js  702b987b601a41752d79aabaf8914a918273af29-32416edb8b0379d62a46.js.map  8133ec0acd9f9707ad9eb74aef12d7202a269756-32416edb8b0379d62a46.js  8133ec0acd9f9707ad9eb74aef12d7202a269756-32416edb8b0379d62a46.js.map  8edc3fe5-1909f5d0d6beb9fc3b9e.js  8edc3fe5-1909f5d0d6beb9fc3b9e.js.map  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  (+359 more)
deploy/certs/: CMakeLists.txt  README.md  certificate.p12  mcas-cert.pem  mcas-key.pem  mcas-privkey.pem
examples/: CMakeLists.txt  README.md
examples/configurations/: CMakeLists.txt  example-hstore-devdax-0.conf  example-hstore-devdax-ado-signals0.conf.in  example-hstore-devdax-ado0.conf  example-hstore-devdax-ado0.conf.in  example-hstore-devdax-scale-0.conf  example-hstore-devdax-secure-0.conf.in  example-hstore-pmem-ado-signals-null0.conf.in  example-hstore-pmem-ado-signals0.conf.in  example-hstore-pmem-ado0.conf.in  example-hstore-rust-ado.conf.in  example-mapstore-ado0.conf.in  example-mapstore-adotest0.conf.in  example-mapstore-rust-ado.conf.in
examples/cpp_basic/: CMakeLists.txt  README.md  cpp_basic.cpp
examples/cpp_bench/: CMakeLists.txt  README.md  cpp_bench.cpp
examples/gpu_direct/: CMakeLists.txt  README.md
examples/gpu_direct/src/: gpu_direct_demo.cpp  kernel.cu
examples/personalities/: CMakeLists.txt  README.md
examples/personalities/cpp_list/: CMakeLists.txt  README.md  cpp-list.conf.in
examples/personalities/cpp_pm_sort/: .gitignore  CMakeLists.txt  README.md  cpp-pm-sort.conf.in
examples/personalities/cpp_symtab/: CMakeLists.txt  README.md  cpp-symtab.conf.in
examples/personalities/cpp_versioning/: CMakeLists.txt  README.md  example-versioning.conf.in
examples/personalities/example_fb/: CMakeLists.txt  example-fb.conf.in
examples/personalities/finance_graph/: CMakeLists.txt  README.md  finex-example.conf.in  generate_data.sh
examples/personalities/python_numpy/: CMakeLists.txt  README.md  python-numpy.conf.in
examples/personalities/tabulator_ccpm_fb/: CMakeLists.txt  README.md  tabulator-ccpm.conf.in
examples/personalities/tabulator_pmdk_fb/: CMakeLists.txt  README.md  tabulator.conf.in
examples/pymm/torch/: simple_network_numpy.py  simple_network_torch.py  simple_network_with_torch_autograd.py
examples/python_basic/: CMakeLists.txt  README.md  example-python-basic.py.in
examples/scripts/: tmux-scaling-test-kv.sh
src/: CMakeLists.txt
src/ado/: CMakeLists.txt  README.md
src/ado/demo/: CMakeLists.txt
src/ado/enterprise-only/: CMakeLists.txt
src/ado/passthru/: CMakeLists.txt
src/ado/personalities/: CMakeLists.txt
src/ado/rust-wrapper/: CMakeLists.txt
src/ado/testing/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ado-perf/: CMakeLists.txt
src/apps/ado-structured-demo/: CMakeLists.txt
src/apps/graph/: CMakeLists.txt
src/apps/kite/: CMakeLists.txt
src/apps/kvstore-perf/: CMakeLists.txt  data.h  direct_memory_registered.h  dotted_pair.h  exp_erase.cpp  exp_erase.h  exp_get.h  exp_get_direct.h  exp_insert_erase.cpp  exp_iops.h  exp_put.h  exp_put_direct.h  exp_throughput.cpp  exp_throughput.h  exp_update.cpp  experiment.cpp  experiment.h  get_cpu_mask_from_string.h  kvstore_perf.cpp  program_options.cpp  program_options.h  statistics.cpp  statistics.h  stopwatch.h  task.h
src/apps/mcas-mpi-bench/: CMakeLists.txt  README.md  mcas_mpi_bench.cpp  tasks.h
src/components/: CMakeLists.txt  README.md
src/components/ado/: CMakeLists.txt  README.md
src/components/api/: ado_itf.h  components.h  crypto_itf.h  fabric_itf.h  interfaces.h  itf_ref.h  kvindex_itf.h  kvstore.h  kvstore_itf.h  mcas_itf.h  mm_itf.h  registrar_memory_direct.h  sample_itf.h
src/components/client/: CMakeLists.txt
src/components/cluster/: CMakeLists.txt
src/components/crypto/: CMakeLists.txt
src/components/enterprise-only/: CMakeLists.txt
src/components/index/: CMakeLists.txt
src/components/mm/: CMakeLists.txt
src/components/net/: CMakeLists.txt
src/components/store/: CMakeLists.txt
src/kernel/modules/: CMakeLists.txt
src/lib/: CMakeLists.txt  blindi_seqtree.hpp
src/lib/common/: CMakeLists.txt
src/lib/cw/: CMakeLists.txt
src/lib/flatbuffers/: CMakeLists.txt  conanfile.py
src/lib/libadoproto/: CMakeLists.txt
src/lib/libbase64/: README.md  (+1 more)
src/mm/: CMakeLists.txt  mm_plugin_itf.h  plugin.cpp.template
src/python/: CMakeLists.txt  install-python-deps.sh
src/server/: CMakeLists.txt
testing/: CMakeLists.txt
testing/ado-test/: CMakeLists.txt  README.md
testing/eastl-test/: CMakeLists.txt
testing/kv-test/: CMakeLists.txt
testing/libnop/: CMakeLists.txt
testing/mlxstat/: CMakeLists.txt
testing/regression/: CMakeLists.txt
(+1611 files in other folders)
