cmake_minimum_required (VERSION 3.5.1 FATAL_ERROR)

install(DIRECTORY ./
  DESTINATION certs
  FILES_MATCHING PATTERN "*.pem"
  PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE GROUP_WRITE WORLD_WRITE)


install(DIRECTORY ./
  DESTINATION certs
  FILES_MATCHING PATTERN "*.p12"
  PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE GROUP_WRITE WORLD_WRITE)


